@@ -1,3 +1,9 @@
+2005-08-19  Sarfraaz Ahmed <asarfraaz@novell.com>
+
+	* mail/mail-stub-exchange.c : Fix the name collision for global
+	variable name. The same name was being used by GConf and us.
+	Fixes #313076
+
 2005-08-17  Not Zed  <NotZed@Ximian.com>
 
 	** See bug #312668.
